@@ -7511,15 +7511,19 @@ e: Examine  !: Apply  .: Next  ,: Previous</screen>
 
 	    <seglistitem>
 	      <seg><literal>%T</literal></seg>
-	      <seg>Tagged</seg>
-	      <seg>1</seg>
+	      <seg>Tagged (and user-tags)</seg>
+	      <seg>30</seg>
 	      <seg>No</seg>
 	      <seg>
-		Outputs <quote><computeroutput>*</computeroutput></quote> if the
-		package is tagged, nothing
-		otherwise.<footnote><para>Currently tagging is not
-		supported; this escape is for future
-		use.</para></footnote>
+		<para>
+		  Outputs <quote><computeroutput>*</computeroutput></quote> if
+		  the package is tagged, nothing
+		  otherwise.<footnote><para>Currently tagging is not supported;
+		  this escape is for future use.</para></footnote>
+		</para>
+		<para>
+		  This field also includes user-tags.
+		</para>
 	      </seg>
 	    </seglistitem>
 
