@@ -33,6 +33,8 @@ Version 0.7.5 UNRELEASED
 
   * [cmdline] Improve error reporting of add/remove-user-tags (Closes: #652421)
 
+  * Reuse format string %T also for user-tags (Closes: #498442, #665824)
+
 - Bug fixes:
 
   * [cmdline] Fix problems in 'build-depends' causing malfunctions
